--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-reqwest = { version = "0.12.19", features = ["blocking", "json"] }
-serde = { vesion = "1.0.219",  features = ["derive"] }
-serde_json = "1.0.140"
-tokio = { version = "1.45.1", features = ["full"] }
+reqwest = { version = "0.12", features = ["blocking", "json"] }
+serde = { version = "1",  features = ["derive"] }
+serde_json = "1"
 
 
