--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2024"
 reqwest = { version = "0.12", features = ["blocking", "json"] }
 serde = { version = "1",  features = ["derive"] }
 serde_json = "1"
-
+toml = "0.8"
+anyhow = "1"
+dirs = "6"
 
